--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log = ./src/main/resources
-log4j.rootLogger=DEBUG, FILE
+log4j.rootLogger=WARN, FILE
 log4j.logger.deng=INFO
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=${log}/log.out
