--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .project
 .settings/
 /src/main/resources/log.out
+/src/main/resources/*.h2*
+/src/main/resources/*.sql
 #the directory where maven will build things
 target/ 
 /target/
